TODO
* Add support for Unicode Normalization Form Canonical Decomposition (NFD)
* improve file entry support
** add libfsapfs_file_entry_get_sub_file_entry_by_utf8_name
** add libfsapfs_file_entry_get_sub_file_entry_by_utf16_name
* Add container data handle? Add decryption support and use it to read container key bag?
* rename volume data handle to container data handle?
* add snapshot support

library:
* improve file system B-tree support
** use libfdata to improve performance?
* improve file content read support
** encrypted file content read support
** compressed file content read support?
* change container read bootstap as advised in documentation
** validate checksum
** read backup container superblocks
* refactor libfsapfs_encryption_aes_key_unwrap to use encryption context?
* Create libfsapfs_container_superblock_get_identifier
* Create libfsapfs_volume_superblock_get_identifier

Python bindings:
* add extents object
* add support for posix time in nano seconds

Tools:
* fsapfsinfo tool
** add volume selection
** do not print name of root file entry
* add fsapfsmount tool

Tests:
* test with copy of mounted file system
* add tests for container_key_bag
* add tests for volume_key_bag
* add tests for key_encrypted_key

20180907
* see `git log' for more recent change log
* Initial version based on libfsrefs and libfsntfs
